// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeroSection > renders correctly (snapshot) 1`] = `
<div>
  <section
    class="w-full bg-white"
  >
    <div
      class="relative"
    >
      <div
        class="max-w-max-width mx-auto px-5 min-[680px]:px-8 min-[1024px]:px-spacing-x"
      >
        <div
          class="py-8 sm:pt-8 lg:py-0 lg:w-1/2 lg:min-h-[600px] lg:flex lg:items-center"
        >
          <div
            class="w-full lg:max-w-[512px] space-y-8"
          >
            <div
              class="space-y-5 sm:space-y-4"
            >
              <h1
                class="bluedot-h1 not-prose text-[32px] sm:text-[40px] sm:leading-tight lg:text-[40px] xl:text-5xl leading-tight font-semibold tracking-[-0.5px] text-[#13132E]"
              >
                AGI Strategy – Learn how to navigate humanity's most critical decade
              </h1>
              <p
                class="bluedot-p not-prose text-size-sm sm:text-lg sm:leading-[1.6] lg:text-lg leading-relaxed opacity-80 text-[#13132E] whitespace-pre-line"
              >
                Artificial General Intelligence is moving from research to reality. Understand the race, the risks, and the strategic decisions that will shape economies, security, and our collective future.
              </p>
            </div>
            <div
              class="flex gap-3"
            >
              <a
                class="cta-button flex items-center justify-center duration-200 w-fit whitespace-nowrap not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none cta-button--primary link-on-dark h-10 lg:h-[50px] px-5 py-2.5 text-[14px] lg:text-[16px] font-medium rounded-md cursor-pointer transition-colors bg-bluedot-normal text-white hover:bg-[#1a3399] focus:bg-[#1a3399]"
                href="https://example.com/apply"
                tabindex="0"
              >
                Apply now
              </a>
              <a
                class="cta-button flex items-center justify-center duration-200 w-fit whitespace-nowrap not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none cta-button--primary link-on-dark h-10 lg:h-[50px] px-5 py-2.5 text-[14px] lg:text-[16px] font-medium rounded-md bg-transparent cursor-pointer transition-colors border border-[rgba(19,19,46,0.3)] text-[#13132E] hover:border-[rgba(19,19,46,0.5)] hover:bg-[rgba(19,19,46,0.05)] hover:text-[#13132E]"
                href="/courses/agi-strategy/1"
                tabindex="0"
              >
                Browse curriculum
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="h-80 sm:h-[430px] lg:absolute lg:right-0 lg:inset-y-0 lg:w-1/2 lg:h-auto overflow-hidden"
      >
        <img
          alt="AGI Strategy visualization"
          class="size-full object-cover lg:object-center"
          fetchpriority="high"
          src="/images/agi-strategy/hero-banner.png"
        />
        <div
          class="absolute inset-0 pointer-events-none bg-contain bg-repeat mix-blend-soft-light"
          style="background-image: url("/images/agi-strategy/noise.webp");"
        />
      </div>
    </div>
  </section>
</div>
`;

exports[`HeroSection > renders gradient variant correctly (snapshot) 1`] = `
<div>
  <section
    class="w-full "
    style="background: linear-gradient(135deg, #0a284c 0%, #1a3a5c 100%);"
  >
    <div
      class="relative"
    >
      <div
        class="max-w-max-width mx-auto px-5 min-[680px]:px-8 min-[1024px]:px-spacing-x"
      >
        <div
          class="py-8 sm:pt-8 lg:py-0 lg:w-1/2 lg:min-h-[600px] lg:flex lg:items-center"
        >
          <div
            class="w-full lg:max-w-[512px] space-y-8"
          >
            <div
              class="space-y-5 sm:space-y-4"
            >
              <p
                class="bluedot-p not-prose text-[14px] font-medium tracking-[0.28px] leading-[1.6] uppercase"
                style="color: #91cfff;"
              >
                COHORT-BASED COURSE
              </p>
              <h1
                class="bluedot-h1 not-prose text-[32px] sm:text-[40px] sm:leading-tight lg:text-[40px] xl:text-5xl leading-tight font-semibold tracking-[-0.5px] text-white"
              >
                The Future of AI
              </h1>
              <p
                class="bluedot-p not-prose text-size-sm sm:text-lg sm:leading-[1.6] lg:text-lg leading-relaxed opacity-80 text-white whitespace-pre-line"
              >
                Artificial General Intelligence is moving from research to reality. Understand the race, the risks, and the strategic decisions that will shape economies, security, and our collective future.
              </p>
            </div>
            <div
              class="flex gap-3"
            >
              <a
                class="cta-button flex items-center justify-center duration-200 w-fit whitespace-nowrap not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none cta-button--primary bg-bluedot-normal link-on-dark h-10 lg:h-[50px] px-5 py-2.5 text-[14px] lg:text-[16px] font-medium rounded-md cursor-pointer transition-colors text-[#13132e] hover:brightness-90"
                href="https://example.com/apply"
                style="background-color: #91cfff;"
                tabindex="0"
              >
                Apply now
              </a>
              <a
                class="cta-button flex items-center justify-center duration-200 w-fit whitespace-nowrap not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none cta-button--primary link-on-dark h-10 lg:h-[50px] px-5 py-2.5 text-[14px] lg:text-[16px] font-medium rounded-md bg-transparent cursor-pointer transition-colors border hover:bg-white/10"
                href="/courses/agi-strategy/1"
                style="border-color: #91cfff; color: #91cfff;"
                tabindex="0"
              >
                Browse curriculum
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        class="h-80 sm:h-[430px] lg:absolute lg:right-0 lg:inset-y-0 lg:w-1/2 lg:h-auto overflow-hidden"
      >
        <img
          alt="AGI Strategy visualization"
          class="size-full object-cover lg:object-center"
          fetchpriority="high"
          src="/images/agi-strategy/hero-banner.png"
        />
      </div>
    </div>
  </section>
</div>
`;
